infra/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: r16a-z-grid-api
    namespace: r16a-z-grid
spec:
    type: ClusterIP
    selector:
        app: r16a-z-grid-api
    ports:
        - name: http
          port: 8080
          targetPort: 8080
