infra/py-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: r16a-z-grid-py-engine
    namespace: r16a-z-grid
spec:
    type: ClusterIP
    selector:
        app: r16a-z-grid-py-engine
    ports:
        - name: http
          port: 8090
          targetPort: 8090
